--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
 body {
+  background-color: #121212; /* Dark background */
+  font-family: 'Arial', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://img.freepik.com/premium-vector/happy-halloween-with-scary-pumpkin-night_188411-187.jpg'); /* Background image */
+  background-size: cover; /* Cover the entire screen */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Prevent repeating the image */
+  background-attachment: fixed; /* Keep the background fixed on scroll */
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  font-family: 'Creepster', cursive, sans-serif;/* Spooky font */
+  color: #ff7518; /* Pumpkin orange */
 }
